vcluster_versioned_docs/version-0.34.0/production-guide/single-tenant.mdx
---
title: Single-Tenant Per Customer
sidebar_label: Single-Tenant
sidebar_position: 7
description: Deploy a dedicated cluster stack per enterprise customer. Day 0, Day 1, and Day 2 path for SaaS and B2B providers.
---

Give each enterprise customer their own complete cluster stack. Dedicated nodes, an isolated tenant cluster, and full cluster-admin access if you choose to offer it. Your platform team handles provisioning and lifecycle. Customers see only their own environment.

**Typical stack:** Platform + private nodes per customer. vMetal optional for physical server fleets. vNode for customers requiring privileged workload support.

**What makes this path different:** Each customer is fully isolated at the node level. Customers may have cluster-admin rights to their own cluster while remaining invisible to each other and to the platform layer. This path is closely related to the [AI Cloud path](./ai-cloud.mdx). The main distinction is whether your customers consume Kubernetes directly (this path) or through your own product API (AI Cloud).

## Day 0: Design decisions

| Decision | Read next | Outcome |
| --- | --- | --- |
| Define per-customer node allocation | [Private Nodes](../deploy/worker-nodes/private-nodes/overview.mdx), [Auto Nodes](/platform/administer/node-providers/overview) | Each customer cluster maps to a dedicated node pool. Auto Nodes provisions and reclaims nodes as customers are added or removed. |
| Plan provisioning automation | [Templates](/platform/administer/templates/overview), [Terraform](/platform/administer/node-providers/terraform) | Customer cluster creation is triggered by your CRM or provisioning system, not by manual Platform operations. |
| Define offboarding and node reclaim | [Manage private nodes](../deploy/worker-nodes/private-nodes/manage.mdx), [vMetal docs](https://www.vmetal.ai/docs/) | Document how nodes are reclaimed and reimaged when a customer offboards. |

## Day 1: Stand up the first customer cluster

1. Install [vCluster Platform](/platform/install/quick-start-guide).
2. Configure [Auto Nodes](/platform/administer/node-providers/overview) or [vMetal](https://www.vmetal.ai/docs/) for automated node provisioning and reclaim.
3. Create a per-customer cluster template with [private nodes](../deploy/worker-nodes/private-nodes/overview.mdx), [backing store](../configure/vcluster-yaml/control-plane/components/backing-store/README.mdx), and [HA](../deploy/control-plane/kubernetes-pod/high-availability.mdx).
4. Wire provisioning automation to Platform via Terraform, CLI, or API.
5. Validate the full customer lifecycle: provision, validate isolation, access as cluster-admin, offboard, and verify node reclaim.

## Day 2: Operate

| Operation | Read next |
| --- | --- |
| Add and remove customers | [Auto Nodes](/platform/administer/node-providers/overview), provisioning automation |
| Back up and restore per-customer | [Snapshots](../manage/backup-restore/backup.mdx), [restore](../manage/backup-restore/restore.mdx) |
| Upgrade customer clusters | [Upgrade vCluster](../manage/upgrade/upgrade-version.mdx) |
