vcluster_versioned_docs/version-0.36.0/production-guide/single-tenant.mdx
---
title: Single-Tenant Per Customer
sidebar_label: Single-Tenant
sidebar_position: 8
description: Deploy a dedicated cluster stack per enterprise customer. Day 0, Day 1, and Day 2 path for SaaS and B2B providers.
---

Give each enterprise customer their own complete cluster stack. Dedicated nodes, an isolated tenant cluster, and full cluster-admin access if you choose to offer it. Your platform team handles provisioning and lifecycle. Customers see only their own environment.

**Customer access model:** External enterprise customers, optionally with cluster-admin on their own tenant cluster. **Worker-node model:** Private nodes per customer. See [Choose a worker node model](./choose-worker-node-model.mdx).

**Typical stack:** Platform + private nodes per customer. vMetal optional for physical server fleets. vNode for customers requiring privileged workload support.

**What makes this path different:** Each customer is fully isolated at the node level. Customers may have cluster-admin rights to their own cluster while remaining invisible to each other and to the platform layer. This path is closely related to the [AI Cloud path](./ai-cloud.mdx). The main distinction is whether your customers consume Kubernetes directly (this path) or through your own product API (AI Cloud).

## Day 0: Design decisions

| Decision | Read next | Outcome |
| --- | --- | --- |
| Define per-customer node allocation | [Private Nodes](../deploy/worker-nodes/private-nodes/overview.mdx), [Auto Nodes](/docs/platform/administer/node-providers/overview) | Each customer cluster maps to a dedicated node pool. Auto Nodes provisions and reclaims nodes as customers are added or removed. |
| Define the default network policy posture | [Network policy](../configure/vcluster-yaml/policies/network-policy.mdx) | Set a default-deny east-west posture per customer template and confirm the control plane cluster's CNI enforces it. Some CNIs accept NetworkPolicy objects without enforcing them. |
| Choose the GPU scheduling model | [DeviceClasses](../configure/vcluster-yaml/sync/from-host/device-classes.mdx), [DRA ResourceClaims](../configure/vcluster-yaml/sync/to-host/DRA/resourceclaims.mdx) | Device-plugin-style `DeviceClass` sync covers simple, whole-GPU allocation. DRA `ResourceClaim` sync (Pro) supports fine-grained and shared GPU allocation, relevant if customers get cluster-admin access to schedule their own workloads. |
| Plan tenant storage | [Storage classes from host](../configure/vcluster-yaml/sync/from-host/storage-classes.mdx), [CSI storage capacities](../configure/vcluster-yaml/sync/from-host/csi-storage-capacities.mdx) | Decide which storage classes each customer can request, and whether to sync host `CSIStorageCapacity` for scheduler-aware placement. |
| Plan provisioning automation | [Templates](/docs/platform/administer/templates/overview), [Terraform](/docs/platform/administer/node-providers/terraform) | Customer cluster creation is triggered by your CRM or provisioning system, not by manual Platform operations. |
| Define offboarding and node reclaim | [Manage private nodes](../deploy/worker-nodes/private-nodes/manage.mdx), [vMetal docs](https://www.vmetal.ai/docs/) | Document how nodes are reclaimed and reimaged when a customer offboards. |
| Plan security hardening and audit logging | [Security baseline](../security/README.mdx), [CIS hardening guide](../deploy/control-plane/kubernetes-pod/security/hardening-guide/overview.mdx), [Platform audit logging](/docs/platform/configure/platform-configs/audit) | Apply a CIS benchmark baseline to the control plane cluster and decide audit log retention and SIEM integration, especially where customers hold cluster-admin access to their own cluster. |

## Day 1: Stand up the first customer cluster

1. Install [vCluster Platform](/docs/platform/install/quick-start-guide).
2. Configure [Auto Nodes](/docs/platform/administer/node-providers/overview) or [vMetal](https://www.vmetal.ai/docs/) for automated node provisioning and reclaim.
3. Create a per-customer cluster template with [private nodes](../deploy/worker-nodes/private-nodes/overview.mdx), [backing store](../configure/vcluster-yaml/control-plane/components/backing-store/README.mdx), and [HA](../deploy/control-plane/kubernetes-pod/high-availability.mdx).
4. Apply a default-deny [network policy](../configure/vcluster-yaml/policies/network-policy.mdx) in the template and confirm the control plane cluster's CNI enforces it.
5. Configure per-customer [storage classes](../configure/vcluster-yaml/sync/from-host/storage-classes.mdx) in the template.
6. Configure GPU scheduling: sync [DeviceClasses](../configure/vcluster-yaml/sync/from-host/device-classes.mdx) for device-plugin allocation, or enable [DRA ResourceClaim sync](../configure/vcluster-yaml/sync/to-host/DRA/resourceclaims.mdx) for fine-grained allocation.
7. Apply the [CIS hardening baseline](../deploy/control-plane/kubernetes-pod/security/hardening-guide/overview.mdx) to the control plane cluster and enable [Platform audit logging](/docs/platform/configure/platform-configs/audit).
8. Wire provisioning automation to Platform using Terraform, CLI, or API.
9. Validate the full customer lifecycle: provision, validate isolation, access as cluster-admin, offboard, and verify node reclaim.

## Day 2: Operate

| Operation | Read next |
| --- | --- |
| Add and remove customers | [Auto Nodes](/docs/platform/administer/node-providers/overview), provisioning automation |
| Back up and restore per-customer | [Snapshots](../manage/backup-restore/backup.mdx), [restore](../manage/backup-restore/restore.mdx) |
| Upgrade customer clusters | [Upgrade vCluster](../manage/upgrade/upgrade-version.mdx) |
| Track GPU utilization and faults for metering and troubleshooting | [GPU observability templates](/docs/platform/maintenance/observability/gpu-observability-templates), [NVSentinel GPU observability](/docs/platform/maintenance/observability/nvsentinel-gpu-observability) |
| Review audit logs and security posture | [Platform audit logging](/docs/platform/configure/platform-configs/audit), [security baseline](../security/README.mdx) |
